--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "chalk": "^2.4.1",
     "debug": "^4.1.0",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
   }
