--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "set DEBUG=app & node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "bootstrap": "^4.1.3",
     "chalk": "^2.4.1",
     "debug": "^4.1.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
